# Haskell-SocialMedia

./: .gitignore  docker-compose.yaml
backend/: Dockerfile  backend.cabal
backend/app/: Main.hs
backend/src/: API.hs  Migrations.hs  Schema.hs  Websocket.hs
backend/src/Controller/: FollowController.hs  IdenticonController.hs  PassRecoveryController.hs  PostController.hs  UserController.hs
backend/src/Repository/: FollowRepository.hs  PostRepository.hs  UserRepository.hs
backend/src/Service/: FollowService.hs  IdenticonService.hs  PassRecoveryService.hs  PostService.hs  UserService.hs
backend/src/Utils/: PasswordEncryption.hs
backend/test/: Spec.hs
backend/test/Service/: IdenticonServiceSpec.hs
backend/test/Utils/: PasswordEncryptionSpec.hs
frontend/: Dockerfile  package-lock.json  package.json  packages.dhall  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/recovery/[id]/: page.tsx
frontend/src/app/user/[id]/: page.tsx
frontend/src/components/: ChatRow.tsx  EditForm.tsx  LoadingSpinner.tsx  LoginForm.tsx  Modal.tsx  TweetCard.tsx  TweetForm.tsx
frontend/src/components/Follow/: Followers.tsx  Following.tsx
frontend/src/components/Panels/: Left.tsx  Main.tsx  Right.tsx
frontend/src/components/Profile/: Actions.tsx
frontend/src/components/Profile/Photo/: Photo.client.tsx  Photo.server.tsx  getProfileImage.ts
frontend/src/components/SignIn/: LoginForm.tsx  RecoveryForm.tsx  RegisterForm.tsx  index.tsx
frontend/src/context/: user.context.tsx
frontend/src/services/: fetchFallback.ts
