cabal-version:      2.4
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Enzoerb
maintainer:         enzoerbert@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
    build-depends:
        base >= 4.14 && < 5
        , postgresql-simple
        , time
        , uuid
        , bytestring
        , base64-bytestring
        , text
        , mtl
        , servant
        , servant-server
        , warp
        , aeson
        , cryptonite
        , memory
        , utf8-string
        , JuicyPixels
        , wai-cors >=0.2 && <0.3
        , websockets
        , wai-websockets
        , wai
        , http-types
    default-language: Haskell2010
    ghc-options:      -Wall

library
    import:             common-all
    hs-source-dirs:     src
    exposed-modules:    Migrations
                        Websocket
                        Schema
                        API
                        Utils.PasswordEncryption
                        Repository.UserRepository
                        Repository.PostRepository
                        Repository.FollowRepository
                        Service.UserService
                        Service.PostService
                        Service.FollowService
                        Controller.UserController
                        Controller.PostController
                        Controller.FollowController

executable backend
    import:         common-all
    main-is:        Main.hs
    hs-source-dirs: app, src
    other-modules:  Migrations
                    Schema
                    API
                    Utils.PasswordEncryption
                    Repository.UserRepository
                    Repository.PostRepository
                    Repository.FollowRepository
                    Service.UserService
                    Service.PostService
                    Service.FollowService
                    Controller.UserController
                    Controller.PostController
                    Controller.FollowController

Test-Suite api
    import:          common-all
    type:            exitcode-stdio-1.0
    main-is:         Spec.hs
    hs-source-dirs:  test, src
    other-modules:   Service.IdenticonService
    build-depends:
        hspec
        , hspec-contrib
        , QuickCheck
        , HUnit